--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 /*  your css code here. If applicable */
+.btn{
+	background-color:purple;
+	color:white;
+}
+
+.stop{
+	background-color:purple;
+	color:white;
+}
+
+.buttons{
+	background-color:lavender;
+}
